# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pytargetingutilities
description = Base lib for aws operations and more
author = Slash Gordon
author_email = slash.gordon.dev@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/emetriq/pytargetingutilities
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/emetriq/pytargetingutilities/wiki
    Source = https://github.com/emetriq/pytargetingutilities
    Changelog = https://github.com/emetriq/pytargetingutilities/blob/main/CHANGELOG.md
    Tracker = https://github.com/emetriq/pytargetingutilities/issues
    Download = https://github.com/emetriq/pytargetingutilities/releases
    Twitter = https://twitter.com/emetriq

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where = src
exclude =
    test

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install pytargetingutilities[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --junitxml test-results/test.xml --cov src/pytargetingutilities --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = test
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]

version = 4.0.1
package = pytargetingutilities
extensions =
    markdown

[semantic_release]
version_variable=src/pytargetingutilities/__init__.py:__version__
branch=main
commit_version_number = True
commit_subject = release {version} [skip ci]
commit_message =
commit_author = release-bot <release@emetriq.com>